[package]
name = "kamu-adapter-graphql"
description = "GraphQL adapter for Kamu's domain model"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []
testing = []


[dependencies]
common-macros = { workspace = true }
database-common = { workspace = true }
email-utils = { workspace = true }
event-sourcing = { workspace = true }
file-utils = { workspace = true }
internal-error = { workspace = true }
kamu = { workspace = true }
kamu-accounts = { workspace = true }
kamu-adapter-flow-dataset = { workspace = true }
kamu-adapter-flow-webhook = { workspace = true }
kamu-adapter-task-dataset = { workspace = true }
kamu-adapter-task-webhook = { workspace = true }
kamu-auth-rebac = { workspace = true }
kamu-auth-web3 = { workspace = true }
kamu-core = { workspace = true }
kamu-datasets = { workspace = true }
kamu-flow-system = { workspace = true }
kamu-flow-system-services = { workspace = true }
kamu-search = { workspace = true }
kamu-webhooks = { workspace = true }
kamu-task-system = { workspace = true }
observability = { workspace = true, features = ["dill"] }
odf = { workspace = true, default-features = false, features = [
    "arrow",
    "http",
    "lfs",
    "s3",
] }
random-strings = { workspace = true }

async-graphql = { version = "7", default-features = false, features = [
    "apollo_tracing",
    "chrono",
    "dataloader",
    "url",
] }
async-trait = { version = "0.1", default-features = false }
base64 = { version = "0.22", default-features = false }
bytes = { version = "1", default-features = false }
chrono = "0.4"
# TODO: Currently needed for type conversions but ideally should be encapsulated by kamu-core
datafusion = { version = "50", default-features = false, features = ["serde"] }
dill = { version = "0.15", default-features = false }
fallible_map = { version = "0.1.1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
http = { version = "1", default-features = false }
humansize = { version = "2", default-features = false }
indoc = "2"
itertools = { version = "0.14", default-features = false }
jsonschema = { version = "0.37", default-features = false }
nutype = { version = "0.6", default-features = false }
secrecy = "0.10"
serde = { version = "1", default-features = false }
serde_json = "1"
sha3 = "0.10"
tokio = { version = "1", default-features = false, features = [] }
tracing = "0.1"
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false, features = ["v4"] }


[dev-dependencies]
file-utils = { workspace = true }
init-on-startup = { workspace = true }
kamu = { workspace = true, features = ["testing"] }
kamu-accounts = { workspace = true, features = ["testing"] }
kamu-accounts-inmem = { workspace = true }
kamu-accounts-services = { workspace = true }
kamu-adapter-auth-oso-rebac = { workspace = true }
kamu-adapter-http = { workspace = true }
kamu-adapter-graphql = { workspace = true, features = ["testing"] }
kamu-auth-rebac-inmem = { workspace = true }
kamu-auth-rebac-services = { workspace = true }
kamu-datasets-inmem = { workspace = true }
kamu-datasets-services = { workspace = true, features = ["testing"] }
kamu-flow-system-inmem = { workspace = true }
kamu-flow-system-services = { workspace = true }
kamu-task-system-inmem = { workspace = true }
kamu-task-system-services = { workspace = true }
kamu-webhooks = { workspace = true, features = ["testing"] }
kamu-webhooks-inmem = { workspace = true }
kamu-webhooks-services = { workspace = true }
messaging-outbox = { workspace = true }
odf = { workspace = true, default-features = false, features = ["testing"] }
time-source = { workspace = true }

bon = { version = "3", default-features = false }
oop = "0.0.2"
pretty_assertions = { version = "1" }
tempfile = "3"
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = [] }
