[package]
name = "kamu-adapter-http"
description = "HTTP/REST adapter for Kamu's domain model"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
opendatafabric = { workspace = true }
# TODO: Adapters should depend only on kamu-domain crate and be implementation-agnostic
kamu = { workspace = true }
kamu-data-utils = { workspace = true }
event-bus = { workspace = true }

axum = { version = "0.6", features = ["ws", "headers"] }
axum-extra = { version = "0.8", features = ["async-read-body"] }
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
datafusion = { version = "36", default-features = false } # TODO: Currently needed for type conversions but ideally should be encapsulated by kamu-core
dill = "0.8"
flate2 = "1"                                                           # GZip decoder
futures = "0.3"
http = "0.2"
hyper = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = [] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false, features = ["codec", "compat", "io"] }
tokio-tungstenite = "0.20"
tower = "0.4"
tracing = "0.1"
url = { version = "2", features = ["serde"] }


[dev-dependencies]
container-runtime = { workspace = true }
event-bus = { workspace = true }

fs_extra = "1.3"                                                    # Recursive folder copy
indoc = "2"
paste = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
rand = "0.8"
sha3 = "0.10"
mockall = "0.11"
