[package]
name = "kamu-adapter-http"
description = "HTTP/REST adapter for Kamu's domain model"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []

e2e = []


[dependencies]
database-common = { workspace = true }
database-common-macros = { workspace = true }
email-utils = { workspace = true }
file-utils = { workspace = true }
internal-error = { workspace = true }
http-common = { workspace = true }
# TODO: Adapters should depend only on kamu-domain crate and be implementation-agnostic
kamu = { workspace = true }
kamu-accounts = { workspace = true }
kamu-auth-rebac = { workspace = true }
kamu-datasets = { workspace = true }
kamu-core = { workspace = true, features = ["utoipa"] }
messaging-outbox = { workspace = true }
odf = { workspace = true, features = ["http", "lfs", "s3", "utoipa"] }
s3-utils = { workspace = true }
time-source = { workspace = true }

aws-sdk-s3 = { workspace = true }

axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = [
    "async-read-body",
    "typed-header",
] }
async-trait = "0.1"
base64 = { version = "0.22", default-features = false }
bytes = "1"
canonical_json = { version = "0.5.0", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
datafusion = { version = "50", default-features = false } # TODO: Currently needed for type conversions but ideally should be encapsulated by kamu-core
dill = { version = "0.15", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = [
    "std",
    "fast",
    "zeroize",
] }
flate2 = "1" # GZip decoder
futures = "0.3"
graphql-parser = "0.4"
headers = { version = "0.4", default-features = false }
http = "1"
http-body-util = { version = "0.1", default-features = false }
indoc = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "multipart",
    "json",
    "stream",
    "gzip",
    "brotli",
    "deflate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_with = { version = "3", default-features = false }
strum = { version = "0.27", features = ["derive"] }
tar = "0.4"
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = [] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false, features = [
    "codec",
    "compat",
    "io",
] }
tokio-tungstenite = { version = "0.28", features = ["url"] }
tower = "0.5"
tracing = "0.1"
url = { version = "2", features = ["serde"] }
utoipa = { version = "5", default-features = false, features = [] }
utoipa-axum = { version = "0.2", default-features = false, features = [] }
uuid = { version = "1", default-features = false, features = ["v4"] }


[dev-dependencies]
container-runtime = { workspace = true }
init-on-startup = { workspace = true }
kamu = { workspace = true, features = ["testing"] }
kamu-core = { workspace = true, features = ["testing"] }
kamu-accounts = { workspace = true, features = ["testing"] }
kamu-accounts-inmem = { workspace = true }
kamu-accounts-services = { workspace = true }
kamu-auth-rebac-services = { workspace = true }
kamu-datasets-inmem = { workspace = true }
kamu-auth-rebac-inmem = { workspace = true }
kamu-datasets-services = { workspace = true }
kamu-ingest-datafusion = { workspace = true }
messaging-outbox = { workspace = true }
observability = { workspace = true, features = ["dill"] }
test-utils = { workspace = true }

fs_extra = "1.3"                                               # Recursive folder copy
paste = "1"
pretty_assertions = { version = "1" }
tempfile = "3"
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
rand = "0.9"
mockall = "0.14"
