[package]
name = "kamu-adapter-molecule-services"
description = "Adapter for Molecule specific service layer components."
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []
testing = []


[dependencies]
common-macros = { workspace = true }
kamu-search = { workspace = true }
internal-error = { workspace = true }

async-trait = { version = "0.1", default-features = false }
dill = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
tracing = "0.1"


[dev-dependencies]
