[package]
name = "kamu-adapter-oauth"
description = "OAuth authentication adapter"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
email-utils = { workspace = true }
internal-error = { workspace = true }
odf = { workspace = true }
kamu-accounts = { workspace = true }

async-trait = "0.1"
dill = { version = "0.15", default-features = false }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false, features = ["std"] }


[dev-dependencies]
