[package]
name = "kamu-adapter-odata"
description = "OData protocol adapter based on Datafusion"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
database-common = { workspace = true }
database-common-macros = { workspace = true }
http-common = { workspace = true }
internal-error = { workspace = true }
kamu-auth-rebac = { workspace = true, default-features = false }
kamu-core = { workspace = true }
kamu-datasets = { workspace = true, default-features = false }
odf = { workspace = true, default-features = false, features = [
    "arrow",
    "http",
    "lfs",
    "s3",
] }

async-trait = { version = "0.1", default-features = false }
axum = { version = "0.8", default-features = false, features = [] }
chrono = { version = "0.4", default-features = false }
datafusion = { version = "48", default-features = false }
datafusion-odata = { version = "48", default-features = false }
dill = { version = "0.14", default-features = false }
futures = { version = "0.3", default-features = false }
http = "1"
tracing = "0.1"
utoipa = { version = "5", default-features = false, features = [] }
utoipa-axum = { version = "0.2", default-features = false, features = [] }


[dev-dependencies]
init-on-startup = { workspace = true }
kamu = { workspace = true, features = ["testing"] }
kamu-accounts = { workspace = true }
kamu-accounts-inmem = { workspace = true }
kamu-accounts-services = { workspace = true }
kamu-auth-rebac-inmem = { workspace = true }
kamu-auth-rebac-services = { workspace = true }
kamu-datasets = { workspace = true }
kamu-datasets-inmem = { workspace = true }
kamu-datasets-services = { workspace = true }
messaging-outbox = { workspace = true }
time-source = { workspace = true }

indoc = { version = "2" }
pretty_assertions = { version = "1" }
reqwest = { version = "0.12", default-features = false }
tempfile = { version = "3" }
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1", default-features = false, features = [] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
url = { version = "2", default-features = false }
