[package]
name = "kamu-adapter-oso"
description = "Authorization adapter for Kamu domain based on OSO library"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lib]
doctest = false

[dependencies]
opendatafabric = { workspace = true }
kamu-core = { workspace = true }

async-trait = "0.1"
dill = "0.6"

# Authorization
oso = "0.27"
oso-derive = "0.27"
