[package]
name = "kamu-adapter-web3-evm"
description = "EVM adapter"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
kamu-accounts = { workspace = true, default-features = false }
odf = { workspace = true, default-features = false }

async-trait = { version = "0.1", default-features = false }
dill = { version = "0.13", default-features = false }


[dev-dependencies]
