[package]
name = "kamu-cli"
description = "Decentralized data management tool"
categories = ["command-line-utilities"]
# Run `kamu-cli` just with `cargo run`
default-run = "kamu-cli"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

# Disabling examples discovery as we need them very rarely, but they significantly slow down build times
autoexamples = false
build = "build.rs"


[lints]
workspace = true


[lib]
doctest = false


[features]
default = ["ingest-evm", "ingest-mqtt", "query-extensions-json"]

ingest-evm = ["kamu/ingest-evm"]
ingest-ftp = ["kamu/ingest-ftp"]
ingest-mqtt = ["kamu/ingest-mqtt", "dep:rumqttc"]
query-extensions-json = ["kamu/query-extensions-json"]
web-ui = ["rust-embed"]


[dependencies]
# Kamu
async-utils = { workspace = true }
container-runtime = { workspace = true }
crypto-utils = { workspace = true }
database-common = { workspace = true }
database-common-macros = { workspace = true }
file-utils = { workspace = true }
http-common = { workspace = true }
init-on-startup = { workspace = true }
internal-error = { workspace = true }
observability = { workspace = true, features = ["dill", "prometheus"] }
time-source = { workspace = true }
server-console = { workspace = true }

kamu = { workspace = true }

kamu-adapter-auth-oso-rebac = { workspace = true }
kamu-adapter-auth-web3 = { workspace = true, features = ["did-pkh"] }
kamu-adapter-flight-sql = { workspace = true }
kamu-adapter-flow-dataset = { workspace = true }
kamu-adapter-flow-webhook = { workspace = true }
kamu-adapter-task-dataset = { workspace = true }
kamu-adapter-task-webhook = { workspace = true }
kamu-adapter-graphql = { workspace = true }
graphql-http = { workspace = true }
kamu-adapter-http = { workspace = true, features = [
    "e2e",
], default-features = false }
kamu-adapter-oauth = { workspace = true }
kamu-adapter-odata = { workspace = true }
kamu-datafusion-cli = { workspace = true }
odf = { workspace = true, features = ["datafusion", "http", "s3"] }
random-strings = { workspace = true }

kamu-flow-system = { workspace = true }
kamu-flow-system-services = { workspace = true }
kamu-flow-system-inmem = { workspace = true }
kamu-flow-system-postgres = { workspace = true }
kamu-flow-system-sqlite = { workspace = true }

kamu-task-system = { workspace = true }
kamu-task-system-services = { workspace = true }
kamu-task-system-inmem = { workspace = true }
kamu-task-system-postgres = { workspace = true }
kamu-task-system-sqlite = { workspace = true }

kamu-accounts = { workspace = true }
kamu-accounts-services = { workspace = true }
kamu-accounts-inmem = { workspace = true }
kamu-accounts-postgres = { workspace = true }
kamu-accounts-mysql = { workspace = true }
kamu-accounts-sqlite = { workspace = true }

kamu-datasets-services = { workspace = true }
kamu-datasets = { workspace = true }
kamu-datasets-inmem = { workspace = true }
kamu-datasets-postgres = { workspace = true }
kamu-datasets-sqlite = { workspace = true }

messaging-outbox = { workspace = true }
kamu-messaging-outbox-inmem = { workspace = true }
kamu-messaging-outbox-postgres = { workspace = true }
kamu-messaging-outbox-sqlite = { workspace = true }

kamu-auth-rebac = { workspace = true }
kamu-auth-rebac-inmem = { workspace = true }
kamu-auth-rebac-services = { workspace = true }
kamu-auth-rebac-postgres = { workspace = true }
kamu-auth-rebac-sqlite = { workspace = true }

kamu-webhooks = { workspace = true }
kamu-webhooks-services = { workspace = true }
kamu-webhooks-inmem = { workspace = true }
kamu-webhooks-postgres = { workspace = true }
kamu-webhooks-sqlite = { workspace = true }

kamu-search = { workspace = true }
kamu-search-services = { workspace = true }
kamu-search-openai = { workspace = true }
kamu-search-qdrant = { workspace = true }
kamu-search-elasticsearch = { workspace = true }

kamu-auth-web3-inmem = { workspace = true }
kamu-auth-web3-postgres = { workspace = true }
kamu-auth-web3-services = { workspace = true }
kamu-auth-web3-sqlite = { workspace = true }

kamu-molecule-services = { workspace = true }

# Top-level TLS configuration
# TODO: Include alloy, aws-smithy
# TODO: Unify deps around either ring or aws-lc-rs
# TODO: Unify deps around either using webpki or native certs
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
] }
rumqttc = { optional = true, version = "0.25", default-features = false, features = [
    "use-rustls",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "tls-rustls-aws-lc-rs",
] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }

# CLI
chrono-humanize = "0.2"                                           # Human readable durations
clap = "4"
clap_complete = "4"
console = "0.16"                                                  # Terminal colors
humansize = "2"                                                   # Human readable data sizes
indicatif = "0.18"                                                # Progress bars and spinners
minus = { version = "5", features = ["static_output", "search"] }
num-format = "0.4"                                                # Human-readable number formatting
prettytable-rs = "0.10"                                           # ASCII table formatting
read_input = "0.8"                                                # Basic user input
webbrowser = "1"                                                  # For opening URLs in default system browser

# APIs
arrow-flight = { version = "56", features = ["flight-sql-experimental"] }
async-graphql = { version = "7", default-features = false }
async-graphql-axum = "7"
axum = { version = "0.8", features = ["ws"] }
http = "1"
serde_json = "1"
tonic = { version = "0.13", default-features = false }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "catch-panic"] }
utoipa = { version = "5", default-features = true, features = ["macros"] }
utoipa-axum = { version = "0.2", default-features = true, features = [] }

# Web UI
rust-embed = { optional = true, version = "8", features = [
    "interpolate-folder-path",
    "compression",
] }
mime = "0.3"
mime_guess = "2"

# Config
duration-string = { version = "0.5", features = ["serde"] }
merge = "0.2"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_yaml = "0.9"

# Tracing / logging / telemetry / metrics
prometheus = { version = "0.14", default-features = false }
tracing = "0.1"
tracing-appender = "0.2"
tracing-perfetto = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"

# Utils
async-trait = "0.1"
chrono = "0.4"
cfg-if = "1" # Conditional compilation
datafusion = { version = "50", default-features = false, features = [
    "crypto_expressions",
    "encoding_expressions",
    "parquet",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
dill = { version = "0.14", default-features = false }
dirs = "6"
fs_extra = "1.3"
futures = "0.3"
generic-array = "=0.14.7" # Pinned due to deprecation warnings
glob = "0.3" # Used for path completions
hex = { version = "0.4", default-features = false, features = [] }
indoc = "2"
itertools = "0.14"
libc = "0.2" # Signal names
regex = "1"
secrecy = "0.10"
shlex = "1" # Parsing partial input for custom completions
tempfile = "3"
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["io-util"] }
tokio-stream = { version = "0.1", default-features = false, features = ["net"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
url = "2"
urlencoding = "2"
whoami = "1.6"
strum = { version = "0.27", features = ["derive"] }


[target.'cfg(unix)'.dependencies]
libc = "0.2" # For getting uid:gid


[dev-dependencies]
kamu = { workspace = true, features = ["testing"] }
kamu-cli-puppet = { workspace = true, default-features = false, features = [
    "extensions",
] }

paste = { version = "1", default-features = false }
pretty_assertions = { version = "1" }
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }


[build-dependencies]
vergen = { version = "8", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }
