[package]
name = "database-sqlx-mysql"
description = "MySql/MariaDB specific implementation of database access layer"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
database-common = { workspace = true }
internal-error = { workspace = true }
kamu-core = { workspace = true }
opendatafabric = { workspace = true }

async-trait = "0.1"
dill = "0.8"
chrono = { version = "0.4", default-features = false }
secrecy = "0.8"
thiserror = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features=["sync"] }
serde = "1"
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "mysql",
    "uuid",
    "chrono",
    "migrate"
]
